<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/contact_form_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/find_item"
        android:textColor="@android:color/black"
        android:textSize="40sp"
        android:typeface="serif"
        android:textStyle="bold"/>

    <!--<Spinner
        android:id="@+id/spinner1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/category_prompt" />-->

    <EditText
        android:layout_marginTop="50dp"
        android:id="@+id/searchItem_Name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimaryDark"
        android:hint="@string/searchItem_name"
        android:inputType="textPersonName" />


    <Button
        android:id="@+id/searchItem_button"
        android:background="@drawable/button"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:elevation="4dp"
        android:paddingLeft="70dp"
        android:paddingRight="70dp"
        android:text="@string/searchItem_button"
        android:textColor="#fff" />

</LinearLayout>
